[package]
name = "game-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
vulkano = "0.27.1"
vulkano-shaders = "0.27.1"
winit = "0.25"
vulkano-win = "0.27.1"
png = "0.17"
rand = "0.6.0"
kira = "0.5.3"